# IOVFI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
eval/coreutils/bindiff/: BinExportScript.java  ComputeAccuracy.py  ComputeAllAccuracy.sh  ExportAll.py  ImportAll.py
eval/library-diffing/: CreateHeatMap.py  LibraryDiff.py
inc/: FOSBinLogger.h  FOSBinUtils.h  FuzzResults.h  TupleHelpers.h  binSection.h  binaryDescriptor.h  commandLineParser.h  fbf-memcpy.h  fosbin-config.h.in  fosbin-flop-config.h.in  fosbin-flop.h  fosbin-sleuth-config.h.in  fullTest.h  functionIdentifier.h  iTestCase.h  identifierFactory.h  identifierRegistrar.h  testRun.h
inc/fosbin-flop/: X64RegisterFuzzer.cpp  X64RegisterFuzzer.h  fullIdentifierTest.h  fullTest.h  functionIdentifierNodeGraphVisitor.h  identifierNodeTestCase.h  testNode.h  testRun.h
inc/fosbin-flop/identifiers/: FunctionIdentifierNode.h  fbf-memcpy.h  fbf-memmove.h  fbf-sprintf.h  fbf-strcpy.h  fbf-strncpy.h  functionIdentifier.h  functionIdentifierInteriorNode.h  functionIdentifierNode.h  functionIdentifierNodeI.h  identifierFactory.h  identifierRegistrar.h
inc/fosbin-sleuth/: argumentCountTestCase.h  argumentTestCase.h  emptyTestCase.h  fosbin-sleuth.h  fullArityTest.h  fullSleuthTest.h  protectedBuffer.h
inc/fosbin-sleuth/fuzz/: FosbinFuzzer.h  FullFuzzTest.h
inc/identifiers/: fbf-FuncPowIdentifier.h  fbf-memcpy.h  fbf-memmove.h  fbf-sprintf.h  fbf-strcpy.h  fbf-strncpy.h  functionIdentifier.h  identifierFactory.h  identifierRegistrar.h
rust-apps/: Cargo.toml
rust-apps/src/: main.rs
src/: CMakeLists.txt  main.cpp
src/common/: FOSBinLogger.cpp  FOSBinUtils.cpp  binaryDescriptor.cpp  commandLineParser.cpp  fullTest.cpp  iTestCase.cpp  testRun.cpp
src/coord/: CMakeLists.txt  binSection.cpp  fullTest.cpp  testRun.cpp
src/fosbin-flop/: CMakeLists.txt  functionIdentifierNode.cpp  functionIdentifierNodeGraphVisitor.cpp  main.cpp  testNode.cpp
src/fosbin-flop/coord/: Identifiers.inc  Identifiers.inc.orig  binSection.cpp  fullIdentifierTest.cpp  fullTest.cpp  testRun.cpp
src/fosbin-flop/identifiers/: FunctionIdentifierNode.cpp  fbf-memcpy.cpp  fbf-memmove.cpp  fbf-sprintf.cpp  fbf-strcpy.cpp  fbf-strncpy.cpp  functionIdentifier.cpp  functionIdentifierNodeI.cpp  identifierFactory.cpp  identifierNodeTestCase.cpp
src/fosbin-sleuth/: CMakeLists.txt  TestCaseGenerator.py  argumentCountTestCase.cpp  main.cpp  protectedBuffer.cpp
src/fosbin-sleuth/TestCases/: argumentTestCase.cpp
src/fosbin-sleuth/coord/: fullArityTest.cpp  fullSleuthTest.cpp
src/fosbin-sleuth/fuzz/: FullFuzzTest.cpp
src/fosbin-sleuth/pintool/: AllocatedArea.cpp  AllocatedArea.h  CMakeLists.txt  ContextReader.cpp  ExecutionInfo.cpp  ExecutionInfo.h  FBZergContext.cpp  FBZergContext.h  IOVec.cpp  IOVec.h  PinLogger.cpp  PinLogger.h  X86Context.cpp  ZergCommand.cpp  ZergCommand.h  ZergCommandServer.cpp  ZergCommandServer.h  ZergMessage.cpp  ZergMessage.h  fosbin-zergling.cpp  fosbin-zergling.h  makefile.rules  makefile.rules.in
src/fosbin-sleuth/pintool/shared-library-support/: CMakeLists.txt  load-shared.c
src/fosbin-sleuth/python/: CompareCodeVersions.py  ComputeAccuracy.py  ConsolidateContexts.py  CoverageMetrics.py  GenDecisionTree.py  IdentifyFunction.py  OutputMislabeled.py  fuzz-applications.py
src/fosbin-sleuth/python/contexts/: AllocatedArea.py  FBDecisionTree.py  FunctionDescriptor.py  IOVec.py  PinRun.py  X86Context.py  binaryutils.py  treeutils.py
src/fosbin-sleuth/qemu-afl/: CMakeLists.txt  fuzz-applications.py  main_hook.c
src/id-parser/: gen-csv.py  id-parser.py
src/identifiers/: CMakeLists.txt  decision-tree-data-transform.py  decision-tree.py  fbf-memcpy.cpp  fbf-memmove.cpp  fbf-pow.cpp  fbf-sprintf.cpp  fbf-strcpy.cpp  fbf-strncpy.cpp  functionIdentifier.cpp  identifierFactory.cpp
src/software-ethology/: CMakeLists.txt  ComputeAllAccuracy.sh
src/software-ethology/drse/: CMakeLists.txt  empty.c  empty.cpp
src/software-ethology/pintool/: AllocatedArea.cpp  CMakeLists.txt  FBZergContext.cpp  FBZergContext.h  Fuzzer.cpp  Fuzzer.h  FuzzerBuiltins.h  FuzzerDictionary.h  FuzzerTracePC.cpp  FuzzerTracePC.h  FuzzerUtil.cpp  FuzzerUtil.h  IOVec.cpp  IOVec.h  MutationDispatcher.cpp  MutationDispatcher.h  Random.h  X86Context.h  ZergCommand.cpp  ZergCommand.h  ZergCommandServer.h  ZergMessage.h  fosbin-zergling.cpp  fosbin-zergling.h  makefile.rules.in
src/software-ethology/pintool/shared-library-support/: CMakeLists.txt
src/software-ethology/python/: CompareCodeVersions.py  CompareResults.py  ComputeAccuracy.py  ComputeSize.py  ConsolidateContexts.py  CoverageMetrics.py  ExperimentRunner.py  GenDecisionTree.py  IdentifyFunction.py  fuzz-applications.py
src/software-ethology/python/contexts/: AllocatedArea.py  FBDecisionTree.py  FBLogging.py  FunctionDescriptor.py  IOVec.py  ProgramState.py  SEGrindRun.py  X86Context.py  binaryutils.py  treeutils.py
src/software-ethology/valgrind/segrind/: Makefile.am  se_main.c
tests/: Makefile  build-all.sh  ignored.txt  libc.csv  linux_syscalls.csv  memcpy-test.c  memmove-test.c  parse_funcs.awk  sprintf-test.c  strcpy-test.c  strncpy-test.c  test.h  test.yaml
tests/arg-count/: arg-counts.txt  compare3_13.txt  compare3_14.txt  compare3_tmp.txt  test.desc  test2.desc  test3.desc  test3_14.txt
tests/desc/: memcpy-test.desc
tests/eval/binutils/: fuzz-binutils.sh
tests/eval/coreutils/: fuzz-coreutils.sh
tests/eval/coreutils/dtree-clang-O0/: hash.map  out.desc
tests/eval/coreutils/dtree-clang-O1/: hash.map  out.desc
tests/scripts/: CompareGroundTruth.py  CreateZlibGuesses.sh  GenAllTrees.sh  GenAllZlibTrees.sh  ListUndetected.py  MeasureAccuracy.sh  OutputArgumentCount.py  ReplaceAddresses.py  SummarizeFBFLog.py  TreeStatistics.py  build-all-libz.sh  build-all-openssl.sh  create-desc.sh  create-offset-map.sh  output-summary.sh  parse-output.sh  run-all-id-tests.sh  run-id-test.sh  segrind_utils.py
tests/src/: fosbin_test.h  memcpy-test.c  memmove-test.c  sprintf-test.c  strcpy-test.c  strncpy-test.c
tests/taint-analysis/: Makefile  submembers.c
(+12 files in other folders)
